fix(aio): ensure header-links are visible at <600px (#21695)
PR Close #21695

--- a/aio/src/styles/2-modules/_heading-anchors.scss
+++ b/aio/src/styles/2-modules/_heading-anchors.scss
@@ -13,6 +13,11 @@
       text-decoration: none;
       vertical-align: middle;
       visibility: hidden;
+
+      @media (max-width: 600px) {
+        float: right;
+        margin-left: 0;
+      }
     }
 
     &:hover .header-link {
